# scrutiny

./: Cargo.toml  README.md
.github/workflows/: ci.yaml  publish.yaml
scrutiny/: Cargo.toml
scrutiny-axum/: Cargo.toml
scrutiny-axum/src/: lib.rs
scrutiny-axum/tests/: extractor.rs
scrutiny-derive/: Cargo.toml
scrutiny-derive/src/: codegen.rs  lib.rs  parse.rs
scrutiny/src/: deserialize.rs  error.rs  lib.rs  traits.rs  value.rs
scrutiny/src/rules/: comparison.rs  format.rs  mod.rs  presence.rs  string.rs
scrutiny/tests/: basic.rs  extended_rules.rs  tuple_enum.rs
validation/: Cargo.toml
validation-axum/: Cargo.toml
validation-axum/src/: lib.rs
validation-axum/tests/: extractor.rs
validation-derive/: Cargo.toml
validation-derive/src/: codegen.rs  lib.rs  parse.rs
validation/src/: deserialize.rs  error.rs  lib.rs  traits.rs  value.rs
validation/src/rules/: format.rs  numeric.rs
validation/tests/: basic.rs  extended_rules.rs  tuple_enum.rs
