[package]
name = "scrutiny-axum"
version = "0.1.0"
edition = "2024"
description = "Axum extractors for the scrutiny validation library — Valid<T>, ValidQuery<T>, ValidForm<T> with customizable error responses"
license = "MIT"
repository = "https://github.com/georgeboot/scrutiny"
keywords = ["validation", "axum", "extractor", "form", "web"]
categories = ["web-programming::http-server"]

[dependencies]
scrutiny = { path = "../scrutiny", features = ["serde", "serde_json", "serde_path_to_error"] }
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_path_to_error = "0.1"
serde_html_form = "0.2"
http = "1"
bytes = "1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
bytes = "1"
