[package]
name = "scrutiny-derive"
version = "0.1.0"
edition = "2024"
description = "Derive macro for the scrutiny validation library"
license = "MIT"
repository = "https://github.com/georgeboot/scrutiny"
keywords = ["validation", "validate", "derive", "macro"]
categories = ["web-programming"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
