[package]
name = "scrutiny"
version = "0.1.0"
edition = "2024"

[dependencies]
scrutiny-derive = { path = "../scrutiny-derive" }

# Optional: format validation crates (behind feature flags)
regex = { version = "1", optional = true }
email_address = { version = "0.2", optional = true }
url = { version = "2", optional = true }
uuid = { version = "1", optional = true }
ulid = { version = "1", optional = true }
chrono = { version = "0.4", default-features = false, features = ["alloc"], optional = true }
chrono-tz = { version = "0.10", optional = true }

# Optional: serialization and deserialization helpers
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
serde_path_to_error = { version = "0.1", optional = true }

[dev-dependencies]
strum = { version = "0.27", features = ["derive"] }

[features]
default = ["regex", "email", "url-parse", "uuid-parse", "chrono", "serde", "serde_json", "serde_path_to_error"]
full = ["default", "ulid-parse", "timezone"]

# Individual rule features
email = ["dep:email_address"]
url-parse = ["dep:url"]
uuid-parse = ["dep:uuid"]
ulid-parse = ["dep:ulid"]
timezone = ["dep:chrono-tz"]
