[package]
name = "validation-axum"
version = "0.1.0"
edition = "2024"

[dependencies]
validation = { path = "../validation", features = ["serde", "serde_json", "serde_path_to_error"] }
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_path_to_error = "0.1"
serde_html_form = "0.2"
http = "1"
bytes = "1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
bytes = "1"
